--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ REDIS_PORT=6379
 MAIL_DRIVER="sendmail"
 MAIL_HOST="smtp.gmail.com"
 MAIL_PORT="587"
-MAIL_USERNAME="sazzad.gtpindia@gmail.com"
+MAIL_USERNAME="utest9049@gmail.com"
 MAIL_PASSWORD="Sazzad@@99"
 MAIL_ENCRYPTION="tls"
 MAIL_FROM_ADDRESS="utest9049@gmail.com"
