--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Littardo Eemporium"
+APP_NAME="Littardo Eemporiumm"
 APP_ENV=local
 APP_KEY=base64:WrvqXJ+ilWOLItqI7C2N2R2dQkqFAHFYzTrQBBJqtso=
 APP_DEBUG=true
